--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Publish Windows
       shell: pwsh
       run: |
-        dotnet publish RF_Go/RF_Go.csproj -c Release -f net8.0-windows10.0.26100.0 -r win-x64 --self-contained -o ./publish/win-x64 -p:PublishReadyToRun=false
+        dotnet publish RF_Go/RF_Go.csproj -c Release -f net8.0-windows10.0.26100.0 -r win-x64 --self-contained -o ./publish/win-x64 -p:PublishReadyToRun=false -p:WindowsAppSDKSelfContained=true -p:WindowsPackageType=None
         
         if (Test-Path "./publish/win-x64") {
           if ((Get-ChildItem -Path "./publish/win-x64" | Measure-Object).Count -gt 0) {
