--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ RF_Go.db3
 Run Command
 Complement_Rapport_RF_Go.docx
 Structure_Presentation_RF_Go.md
+build-local.ps1
 # User-specific files
 *.rsuser
 *.suo
