--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ Run Command
 Complement_Rapport_RF_Go.docx
 Structure_Presentation_RF_Go.md
 build-local.ps1
+build-installer.ps1
 # User-specific files
 *.rsuser
 *.suo
