--- a/RF_Go/RF_Go.csproj
+++ b/RF_Go/RF_Go.csproj
@@ -83,6 +83,7 @@
     <!-- Désactiver AOT pour Android -->
     <PropertyGroup Condition="'$(TargetFramework)' == 'net8.0-android'">
       <RunAOTCompilation>false</RunAOTCompilation>
+      <TrimmerDefaultAction>link</TrimmerDefaultAction>
     </PropertyGroup>
 
     <ItemGroup>
@@ -152,6 +153,11 @@
 
 	<ItemGroup>
 	  <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+	</ItemGroup>
+
+	<!-- Configuration du trimmer pour Android -->
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0-android'">
+	  <TrimmerRootDescriptor Include="ILLink.Substitutions.xml" />
 	</ItemGroup>
 
 </Project>
